  * Misc deprecated protocols aligned with UEFI 2.x specs
  * Some are related to filesystem drivers; for which updated versions are created accordingly
- Improves `AcquireGOP` Feature
  * Now handles uncompressed OptionROMs
  * None encountered to date but theoretically possible
- Improves `AlsoScan` Feature
  * The '@root/boot' path was added to the default 'also_scan_dirs' list
- Improves Generic Menu Handling
  * Now provides a `Return to Main Menu` option on all such menus
- Exposes `MitigatePrimedBuffer` Feature for User Configuration
  * Previously activated by default on all types of firmware
  * A limited base implementation is always active on Non-Apple firmware
  * Can now be extended on by activating a new `mitigate_primed_buffer` token
  * The feature does not operate on Apple firwmare regardless of the token setting
- Amends `Big Selection Image` Size Filtering
  * The maximum Big Selection image size is increased to 512px from 320px
  * The Small Selection image maximum is maintained at 256px
- Amends EFI File Validity Checks
  * Apple `Fat` Binaries are now assumed to be valid on Apple firmware
  * This similarly applies to binaries with missing PE32+ headers


0.13.3.AD (07 Mar 23):
-----------------------
- Fixes Manual Stanza SubMenuEntries
  * A memory conflict meant that including such entries resulted in RefindPlus hanging
- Fixes UGA Graphics
  * Addresses issue of `UGA-Only` GPUs being always forced into TextOnly mode
- Fixes Misc Alt Build Function Duplication Issues
  * Addresses issues reported using the build process at https://github.com/xaionaro/edk2-builder-docker
    - Updates `LodePNG` to Version 20221108
    - Deduplicates `DebugLog` function and aligns calling convention
- Fixes `Forced Default` Config Settings
  * Forced Defaults, typically based on firmware type, could be skipped under some circumstances
  * This gap has now been closed
- Fixes Invalid `ShowTools` Entry Handling